[package]
name = "client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
macroquad = "0.4"
