[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.12"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
bincode = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
